# hotpotai-cli

./: .gitignore  Cargo.toml  README.md
src/: app.rs
